--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@theia/core": "^0.4.0",
     "core-js": "^2.4.1",
+    "inversify": "^5.0.1",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
