--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "@theia/core": "^0.4.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "inversify": "^5.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
